--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -243,7 +243,7 @@ config CLANG_SUPPORTS_DYNAMIC_FTRACE_WITH_ARGS
 
 config GCC_SUPPORTS_DYNAMIC_FTRACE_WITH_ARGS
 	def_bool CC_IS_GCC
-	depends on $(cc-option,-fpatchable-function-entry=2)
+	depends on $(cc-option,-fpatchable-function-entry=4,2)
 	select HAVE_DYNAMIC_FTRACE_WITH_ARGS
 
 config 64BIT
